--- a/modules/dbview/detail.tp.html
+++ b/modules/dbview/detail.tp.html
@@ -53,7 +53,7 @@
         <!-- end_item_title -->        
         <!-- item_import_rawdata -->
         <div class="row">
-            <div class="col-md-3 col-xs-12 text-info text-lg-right dropdown-toggle" data-toggle="collapse" data-target="#rawdata">{title}</div>
+            <div class="col-md-3 col-xs-12 text-info text-lg-right dropdown-toggle" data-toggle="collapse" data-target="#rawdata" data-bs-toggle="collapse" data-bs-target="#rawdata">{title}</div>
             <div class="col-md-9 col-xs-12">
 
                 <div id="rawdata" class="collapse">
