--- a/sections/caves/list.tp.html
+++ b/sections/caves/list.tp.html
@@ -11,7 +11,7 @@
     <div class="card">
         <div class="card-header" id="headingOne">
             <h5 class="mb-0">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"  data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     {i18n:Filter results}
                 </button>
             </h5>
@@ -137,7 +137,7 @@
                 <!-- if {categories} -->
                 <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="collapse" data-target="#collapseFilters" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#collapseFilters" data-bs-target="#collapseFilters" aria-expanded="true" aria-controls="collapseOne">
                             {i18n:Browse by categories}
                         </button>
                     </h5>
